<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TextView en la parte superior -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/header"
        android:gravity="center"
        android:padding="25dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="191dp"
        android:layout_height="220dp"
        android:layout_gravity="top|left"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="118dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/radius3"/>


    <ImageView
        android:id="@+id/container_star1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top|left"
        android:layout_marginLeft="243dp"
        android:layout_below="@+id/text_excelente"
        android:layout_marginTop="10dp"
        android:src="@drawable/container_star1" />

    <ImageView
        android:id="@+id/container_star2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/container_star1"
        android:src="@drawable/container_star1" />

    <ImageView
        android:id="@+id/container_star3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/container_star2"
        android:src="@drawable/container_star1" />

    <ImageView
        android:id="@+id/container_star4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/container_star3"
        android:src="@drawable/container_star1" />

    <ImageView
        android:id="@+id/container_star5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/container_star4"
        android:src="@drawable/container_star1" />

    <TextView
        android:id="@+id/text_excelente"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginLeft="223dp"
        android:layout_marginTop="105dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/excelente"
        android:textColor="@color/verde"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/text_deficiente"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginLeft="222dp"
        android:layout_below="@id/container_star5"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/deficiente"
        android:textColor="@color/rojo"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/text_calificacion"
        android:layout_width="102dp"
        android:layout_height="28dp"
        android:layout_marginLeft="282dp"
        android:layout_marginTop="205dp"
        android:gravity="center_horizontal|top"
        android:text="Calificación \n"
        android:textColor="@color/verde"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/text_calificacion_valor"
        android:layout_width="102dp"
        android:layout_height="28dp"
        android:layout_marginLeft="282dp"
        android:layout_marginTop="225dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/numero"
        android:textColor="@color/verde"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/text_nombreapellido"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginLeft="34dp"
        android:layout_below="@+id/image"
        android:layout_marginTop="10dp"
        android:text="@string/nombrecompleto"
        android:textColor="@color/black"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/text_profesion"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="83dp"
        android:layout_below="@+id/text_nombreapellido"
        android:text="@string/profesion"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/text_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="72dp"
        android:layout_below="@+id/text_profesion"
        android:text="@string/descripcion"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/image_timbre_antecedentes"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginLeft="259dp"
        android:layout_below="@+id/text_profesion"
        android:scaleType="centerInside"
        android:src="@drawable/image_timbre_antecedentes" />

    <Button
        android:id="@+id/botonprecios"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:layout_marginLeft="26dp"
        android:layout_below="@+id/text_descripcion"
        android:text="@string/precios"
        android:textSize="14dp"/>

    <Button
        android:id="@+id/botoncontactar"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:layout_marginLeft="26dp"
        android:text="@string/contactar"
        android:layout_below="@id/botonprecios" />

    <TextView
        android:id="@+id/text_comentarios"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginLeft="33dp"
        android:layout_below="@+id/botoncontactar"
        android:layout_marginTop="5dp"
        android:layout_gravity="top|left"
        android:text="@string/comentarios"
        android:textColor="@color/black"
        android:textSize="22dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@+id/text_comentarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/radius3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/image"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contenedor para los botones en la parte inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Navbar"
        android:padding="16dp">

        <TextView
            android:id="@+id/nav_inicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inicio"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/nav_servicios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/servicios_nav"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/nav_ayuda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ayuda"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:padding="16dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>
