<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Registro"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_alignParentTop="true"
        android:background="@color/navbar"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/volver"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:layout_gravity="top"
        android:background="@drawable/ic_flechavolver"
        android:scaleType="centerInside" />


    <ImageView
        android:id="@+id/imagen"
        android:layout_width="109.08dp"
        android:layout_below="@id/Registro"
        android:layout_marginTop="30dp"
        android:layout_height="112dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/imgperfil" />

    <LinearLayout
        android:layout_below="@id/imagen"
        android:layout_marginTop="30dp"
        android:id="@+id/editTextContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/TVnombre_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/nombre"
            android:textColor="#FF000000"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/ETnombre"
            android:layout_width="347dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/image_rectangle1"
            />

        <TextView
            android:id="@+id/TVrut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/rut"
            android:textColor="#FF000000"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/rut"
            android:layout_width="347dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/image_rectangle1"
            />

        <TextView
            android:id="@+id/TVcorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/correo_electronico"
            android:textColor="#FF000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="347dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/image_rectangle1"
            />

        <TextView
            android:id="@+id/TVtelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/telefono"
            android:textColor="#FF000000"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="347dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:background="@drawable/image_rectangle1"
            />


    </LinearLayout>

    <Button
        android:id="@+id/btnsiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnsiguiente"
        android:layout_below="@id/editTextContainer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_flechasgt"
        />

</RelativeLayout>
