<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/backgroundapp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo_seleccion_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo_portada"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitulo_seleccion_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/subtitulo_portada"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_seleccion_user"
        app:layout_constraintBottom_toTopOf="@id/imagen_seleccion_user"
        android:layout_marginTop="-20dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagen_seleccion_user"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:src="@drawable/imagen_portada"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitulo_seleccion_user"
        app:layout_constraintBottom_toTopOf="@id/guideline_center"
        android:layout_marginTop="10dp"
        app:shapeAppearanceOverlay="@style/radius2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/texto_seleccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_seleccion_user"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagen_seleccion_user"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/boton1_seleccion_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:padding="15dp"
        android:text="@string/nombre1_boton_seleccion_user"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/texto_seleccion"
        app:layout_constraintTop_toBottomOf="@id/texto_seleccion"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/boton2_seleccion_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:padding="15dp"
        android:text="@string/nombre2_boton_seleccion_user"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/boton1_seleccion_user"
        app:layout_constraintTop_toBottomOf="@id/boton1_seleccion_user"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
